[package]
name = "rtl8710-sdk"
version = "0.1.0"
authors = ["David Goodlad <david@goodlad.net>"]
edition = "2018"
links = "sdk"

[dependencies]
freertos_rs = { git = "https://github.com/hashmismatch/freertos.rs", rev = "a5b296a64d48db97c711673a825f6a0e5b9d9188" }
cty = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.49.0"
llvm-tools = "0.1.1"
glob = "0.3.0"
